250418/exam01/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-spring-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hpa-spring
  template:
    metadata:
      labels:
        app: hpa-spring
    spec:
      containers:
      - image: 61.254.18.30:5000/bo-spring:1
        name: spring-con
        readinessProbe:
          httpGet:
            path: /
            port: 8085
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-nginx-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hpa-nginx
  template:
    metadata:
      labels:
        app: hpa-nginx
    spec:
      containers:
      - image: 61.254.18.30:5000/nginx
        name: nginx-con
        volumeMounts:
          - name: vol-index
            mountPath: /usr/share/nginx/html/healthz
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
      volumes:
        - name: vol-index
          configMap:
            name: index
