250418/exam01/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-spring-hpa
spec:
  selector:
    app: hpa-spring
  ports:
  - port: 80
    targetPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-hpa
spec:
  selector:
    app: hpa-nginx
  ports:
  - port: 80
    targetPort: 80
