250418/exam01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ilove.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nginx-hpa
                port:
                  number: 80 #서비스의 포트
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: svc-nginx-hpa
                port:
                  number: 80 #서비스의 포트
